; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_processor.c_processor_set_threads.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_processor.c_processor_set_threads.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PSET_THING_THREAD = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @processor_set_threads(i32 %0, i64** %1, i64* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64**, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i64** %1, i64*** %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i64**, i64*** %6, align 8
  %12 = bitcast i64** %11 to i8**
  %13 = load i64*, i64** %7, align 8
  %14 = load i32, i32* @PSET_THING_THREAD, align 4
  %15 = call i64 @processor_set_things(i32 %10, i8** %12, i64* %13, i32 %14)
  store i64 %15, i64* %8, align 8
  %16 = load i64, i64* %8, align 8
  %17 = load i64, i64* @KERN_SUCCESS, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i64, i64* %8, align 8
  store i64 %20, i64* %4, align 8
  br label %43

21:                                               ; preds = %3
  store i64 0, i64* %9, align 8
  br label %22

22:                                               ; preds = %38, %21
  %23 = load i64, i64* %9, align 8
  %24 = load i64*, i64** %7, align 8
  %25 = load i64, i64* %24, align 8
  %26 = icmp ult i64 %23, %25
  br i1 %26, label %27, label %41

27:                                               ; preds = %22
  %28 = load i64**, i64*** %6, align 8
  %29 = load i64*, i64** %28, align 8
  %30 = load i64, i64* %9, align 8
  %31 = getelementptr inbounds i64, i64* %29, i64 %30
  %32 = load i64, i64* %31, align 8
  %33 = call i64 @convert_thread_to_port(i64 %32)
  %34 = load i64**, i64*** %6, align 8
  %35 = load i64*, i64** %34, align 8
  %36 = load i64, i64* %9, align 8
  %37 = getelementptr inbounds i64, i64* %35, i64 %36
  store i64 %33, i64* %37, align 8
  br label %38

38:                                               ; preds = %27
  %39 = load i64, i64* %9, align 8
  %40 = add i64 %39, 1
  store i64 %40, i64* %9, align 8
  br label %22

41:                                               ; preds = %22
  %42 = load i64, i64* @KERN_SUCCESS, align 8
  store i64 %42, i64* %4, align 8
  br label %43

43:                                               ; preds = %41, %19
  %44 = load i64, i64* %4, align 8
  ret i64 %44
}

declare dso_local i64 @processor_set_things(i32, i8**, i64*, i32) #1

declare dso_local i64 @convert_thread_to_port(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
